test/invalid/ComentariosBlocoNaoFecha/ComentariosBlocoNaoFecha.plume
/**
 * Falta o fecho deste bloco de comentario
 *
 * @author 37059, Rita Henriques
 * @version $Id: ComentariosBlocoNaoFecha.plume 286 2012-05-01 10:24:19Z tcomp000 $
 
 class ComentariosBlocoNaoFecha extends Object is

  method main : () -> String is
		"Hello".toString()